# Changelog for minihomelib

## [Unreleased]

## [0.1.0] 2022-11-09
### Added
- Initial release