@@ -1,23 +1,0 @@
-# minihomelib configuration file
-
-# ISBN processing with isbnlib
-## Validate ISBN
-#isbnlib_validate: True
-## Automatically fetch ISBN metadata
-isbnlib_fetch_meta: True
-
-# Shelf management
-## Default shelves
-shelves:
-  Study:
-    - shelf 1
-    - shelf 2
-    - shelf 3
-  Living room:
-    - shelf 1
-  Reading corner:
-    - shelf 1
-
-# Alerts
-## Past due alert duration (in days)
-past_due: 30
